@@ -7,9 +7,13 @@
 				* Removed JsonArray.addElement().
 				* Removed JsonArray.setElement().
 				* Removed JsonArray.getElements().
-				* Renamed JsonObject.addMember() to JsonObject.add().
+				* Removed JsonArray.getElementList().
+				* Renamed JsonArray.getNumElement() to size();
+				* Renamed JsonObject.addMember() to add().
 				* Removed JsonObject.hasMember(String).
 				* Removed JsonObject.getMembers().
+				* Removed JsonObject.getMemberList().
+				* Renamed JsonObject.getNumMember() to size().
 				* Added Json.of(X) methods to convert primitive types and String to the
           wrapped JSON equivalents.
         * Added asInt(int), asLong(long), asFloat(float), asDouble(double),
